# rust.ping.pong

./: .gitignore  Cargo.toml  README.md
src/: client.rs  main.rs
