[package]
name = "ping2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24.2", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
